--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -33,7 +33,9 @@
         <div class="col-md-16 col-xl-12 chat">
           <div class="card">
             <div class="card-header msg_head">
-              <!--Header content here-->
+              <title>CMPE 255 Project by Bay Area Rockers</title>
+              <h1 style="color: white;">Research Paper Summarizer</h1>
+              <h2 style="color: white;">By Shawn Chumbar, Dhruval Shah, and Sajal Agarwal</h2>
             </div>
             <div class="card-body msg_card_body">
               <form id="uploadForm" action="/upload_files" method="post" enctype="multipart/form-data">
